fix skills icons size on small screen, fix hero content font size on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,10 @@ footer {
     .link {
         font-size: 0.9rem;
     }
+
+    .hero-content h1, .hero-content span {
+        font-size: 1.4rem;
+    }
 }
 
 @media (max-width: 500px) {
@@ -524,25 +528,22 @@ footer {
     }
 
     .hero {
-        background-position: 60% 40%;
+        background-position: 50% 40%;
     }
 
     .hero-content {
         padding-top: 1rem;
     }
 
-    .hero-content h1,
-    .hero-content span {
-        font-size: 1.3rem;
+    .hero-content h1, .hero-content span {
+        font-size: 1.1rem;
     }
 
-    .hero-content p,
-    p {
+    .hero-content p, p {
         font-size: 0.8rem;
     }
 
-    .title h2,
-    article h2 {
+    .title h2, article h2 {
         font-size: 1.2rem;
     }
 
@@ -569,5 +570,9 @@ footer {
     .nav-bar a {
         margin-left: 5px;
         font-size: 0.8rem;
+    }
+
+    #skills-container img {
+        width: 60%;
     }
 }
